@@ -3,6 +3,17 @@
 	* texmfmp.c (maininit): On Windows, latex "\input" "a b c", for example,
 	was not allowed. Allow file name with spaces in these cases.
 
+2012-08-28  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* main.c [WIN32]: Added _setmaxstdio() (from W32TeX).
+
+	* openclose.c (recorder_start): Reduce TL/W32TeX diffs.
+	Avoid using pid_t lacking in WIN32 (MSVC).
+
+2012-08-22  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* texmfmp.c [IS_pTeX]: Rename initdefaultkanji() => initkanji().
+
 2012-08-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* texmfmp.c [WIN32]: bug fix. use rewind (f) to clear error and
